United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6581734 CMS Old Gen's collection usage is zero after GC which is incorrect
6581734 : CMS Old Gen's collection usage is zero after GC which is incorrect

Details
Type:
Bug
Submit Date:
2007-07-17
Status:
Closed
Updated Date:
2011-04-22
Project Name:
JDK
Resolved Date:
2011-04-19
Component:
core-svc
OS:
generic,windows_xp
Sub-Component:
java.lang.management
CPU:
x86,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
5.0,6,6u2
Fixed Versions:
7

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Duplicate:
Duplicate:
Relates:

Sub Tasks

Description
MemoryPoolMXBean.getCollectionUsage() returns zero but it's expected to be non-zero after GC.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx17/baseline/rev/1339e02bc576
                                     
2011-04-22
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/f6f3eef8a521
                                     
2010-07-31
EVALUATION

MemoryService::gc_end(bool fullGC) calls a GCMemoryManager's gc_end() method, using 
"fullGC" to choose either its _major_gc_manager or _minor_gc_manager.

CMS is the _major_gc_manager, but fullGC isn't true when it is invoked.

"Full collection" probably means stop the world, not old gen, but the meaning is mixed up.

At this point we need to know which generations have been collected rather than saying "full collection".
                                     
2009-08-12



Hardware and Software, Engineered to Work Together