6581734: CMS Old Gen's collection usage is zero after GC which is incorrect

Management code enabled for use by a concurrent collector.

Reviewed-by: mchung, ysr